--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/restapi
+spring.datasource.url=jdbc:mysql://localhost:3306/diploma
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=11
 
